<resources>
    <string name="app_name">AppStore</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--http-->
    <string name="http_api_exception">接口异常</string>
    <string name="http_connect_exception">网络连接异常</string>
    <string name="http_http_exception">Http 异常</string>
    <string name="http_unknown_exception">未知异常</string>

    <!--main-->
    <string name="main_recommend">推荐</string>
    <string name="main_ranking">排行</string>
    <string name="main_game">游戏</string>
    <string name="main_category">分类</string>
    
    <!--menu-->
    <string name="menu_update">应用更新</string>
    <string name="menu_download">下载管理</string>
    <string name="menu_uninstall">应用卸载</string>
    <string name="menu_setup">系统设置</string>
    <string name="menu_sing_up">退出登录</string>

    <!--recommend-->
    <string name="rec_app">热门应用</string>
    <string name="rec_game">热门游戏</string>
    <string name="rec_theme">热门主题</string>
    <string name="title_activity_login">Sign in</string>

    <!--login-->
    <string name="login_label">登录</string>
    <string name="login_tel">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_name">点击登录</string>
    <string name="login_tel_error">请输入正确的手机号</string>
    <string name="login_password_short">密码最短6位</string>
    <string name="login_load_title">登录</string>
    <string name="login_load_content">正在登录中</string>

    <!--manager-->
    <string name="manager_label">管理</string>
    <string name="manager_download">下载</string>
    <string name="manager_finish">已完成</string>
    <string name="manager_update">更新</string>
    <string name="manager_installed">已安装</string>

    <!--install-->
    <string name="install_un_sys">不能卸载系统应用</string>
    <string name="install_un_self">不能卸载自己</string>
    <string name="install_un_err_pos">确定</string>

    <!--category-->
    <string name="cate_fine">精品</string>
    <string name="cate_rank">排行</string>
    <string name="cate_news">新品</string>


    <!--appinfo-->
    <string name="info_des">应用描述</string>
    <string name="info_detail">详细信息</string>
    <string name="info_other_app">开发者的其他应用</string>
    <string name="info_relate_app">相关应用</string>
    <string name="info_update_time">更新时间</string>
    <string name="info_last_version">最新版本</string>
    <string name="info_app_size">应用大小</string>
    <string name="info_developer">开发者</string>


    <!--service-->
    <string name="service_install">AppStore 静默安装</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
