<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_update_black"
            android:title="@string/menu_update" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_download_black"
            android:title="@string/menu_download" />
        <item
            android:id="@+id/nav_uninstall"
            android:icon="@drawable/ic_delete_black"
            android:title="@string/menu_uninstall" />
        <item
            android:id="@+id/nav_setup"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_setup" />
    </group>



    <item android:title="commit">
        <menu>
            <item
                android:id="@+id/nav_sign_up"
                android:icon="@drawable/ic_power_black"
                android:title="@string/menu_sing_up" />

        </menu>
    </item>

</menu>
