<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@id/text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/rec_app"
        android:drawableTop="@drawable/ic_android_black_24dp"
        android:textColor="@color/rec_nav"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@id/text_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/rec_game"
        android:drawableTop="@mipmap/ic_launcher"
        android:textColor="@color/rec_nav"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@id/text_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/rec_theme"
        android:drawableTop="@mipmap/ic_launcher"
        android:textColor="@color/rec_nav"
        android:background="?attr/selectableItemBackground"/>

</LinearLayout>